git-annex (6.20161119) UNRELEASED; urgency=medium

  * remotedaemon: Fork to background by default. Added --foreground switch
    to enable old behavior.

 -- Joey Hess <id@joeyh.name>  Sun, 20 Nov 2016 14:10:15 -0400

git-annex (6.20161118) unstable; urgency=medium

  * git-annex.cabal: Loosen bounds on persistent to allow 2.5, which
    on Debian has been patched to work with esqueleto.
    This may break cabal's resolver on non-Debian systems;
    if so, either use stack to build, or run cabal with 
    --constraint='persistent ==2.2.4.1'
    Hopefully this mess with esqueleto will be resolved soon.
  * sync: Pass --allow-unrelated-histories to git merge when used with git
    git 2.9.0 or newer. This makes merging a remote into a freshly created
    direct mode repository work the same as it works in indirect mode.
  * Avoid backtraces on expected failures when built with ghc 8;
    only use backtraces for unexpected errors.
  * fsck --all --from was checking the existence and content of files
    in the local repository, rather than on the special remote. Oops.
  * Linux arm standalone: Build with a 32kb page size, which is needed
    on several ARM NAS devices, including Drobo 5N, and WD NAS.

 -- Joey Hess <id@joeyh.name>  Fri, 18 Nov 2016 11:43:14 -0400

git-annex (6.20161111) unstable; urgency=medium

  * Restarting a crashing git process could result in filename encoding
    issues when not in a unicode locale, as the restarted processes's
    handles were not read in raw mode.
  * Make .git/annex/ssh.config file work with versions of ssh older than
    7.3, which don't support Include. When used with an older version
    of ssh, any ServerAliveInterval in ~/.ssh/config will be overridden
    by .git/annex/ssh.config.
  * S3: Support the special case endpoint needed for the cn-north-1 region.
  * Webapp: Don't list the Frankfurt S3 region, as this (and some other new
    regions) need V4 authorization which the aws library does not yet use.