@@ -1,5 +1,7 @@
 git-annex (6.20161119) UNRELEASED; urgency=medium
 
+  * enable-tor: New command, enables tor hidden service for P2P syncing.
+  * remotedaemon: Serve tor hidden service.
   * remotedaemon: Fork to background by default. Added --foreground switch
     to enable old behavior.
 
